# spirant

./: .gitignore
spirant-encoder-board-rs/: Cargo.toml
spirant-encoder-board-rs/src/: driver.rs  error.rs  lib.rs  registers.rs
spirant-encoder-board/examples/simple-encoder/: Cargo.toml
spirant-encoder-board/examples/simple-encoder/src/: main.rs
spirant-encoder-board/src/: encoder_board.rs
spirant-hw-interface-rs/: Cargo.toml
spirant-hw-interface-rs/src/: main.rs
spirant-oled-display-rs/: Cargo.toml
spirant-oled-display-rs/examples/four-bar-oled/: Cargo.toml
spirant-oled-display-rs/examples/four-bar-oled/src/: main.rs
spirant-oled-display-rs/src/: display_task.rs  driver.rs  error.rs  layout.rs  lib.rs
spirant-parameter-values-rs/: Cargo.toml
spirant-parameter-values-rs/src/: lib.rs
spirant-parameter-values-rs/src/parameter_values/: error.rs  mod.rs  page.rs  parameter.rs  values.rs
spirant-pd/: 4_operator_synth.pd  ewi_testbed.pd  phase_modulation_demo.pd  pod_test.pd
spirant-pd/core/: ewi_emulator.pd  ewi_fm.pd  ewi_subtractive.pd  ewi_subtractive_test.pd  normalized_mixer.pd  phase_modulation_oscillator.pd
spirant-rs/: Cargo.toml
spirant-rs/src/: main.rs
