[package]
name = "encoder-driver"
version = "0.1.0"
edition = "2021"
description = "Async driver for Adafruit Quad Rotary Encoder Breakout (Seesaw-based)"

[dependencies]
embedded-hal-async = "1.0"
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "dc18ee2", features = ["defmt"] }
defmt = { version = "0.3", optional = true }

[features]
defmt = ["dep:defmt"]
