[package]
name = "spirant-hw-interface"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m    = "0.7.6"
cortex-m-rt = "0.7.0"

embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "dc18ee2", features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
    "integrated-timers",
    "task-arena-size-16384"
] }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "dc18ee2", features = [
    "defmt",
    "time-driver",
    "critical-section-impl",
    "rp235xa",
    "binary-info",
] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "dc18ee2" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "dc18ee2" }

embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "dc18ee2" }

defmt       = "0.3"
defmt-rtt   = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
static_cell = "2.0"

# Local library crates — all siblings one level up from this crate
encoder-driver          = { path = "../spirant-encoder-board-rs", features = ["defmt"] }
spirant-oled-display-rs = { path = "../spirant-oled-display-rs", features = ["defmt", "task"] }
spirant                 = { path = "../spirant-parameter-values-rs" }
